--- a/4-浏览器/浏览器/css.html
+++ b/4-浏览器/浏览器/css.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <style>
+    <!-- <style>
         .shadow-box {
             margin-top: 20px;
             margin-left: 20px;
@@ -21,6 +21,6 @@
             box-shadow: 0 2px 0 rgb(54 45 89 / 15%), -2px -2px 0 2px #f2b712, 0 0 0 4px #e1567c;
         }
     </style>
-    <div class="shadow-box">box-shadow: h-shadow v-shadow blur spread color inset;</div>
+    <div class="shadow-box">box-shadow: h-shadow v-shadow blur spread color inset;</div> -->
 </body>
 </html>
